docs: refactoring